# screencapturekit-rs

./: .all-contributorsrc  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  dhat-heap.json
.github/: dependabot.yml
.github/workflows/: build.yml  contributors.yml  rust.yml
examples/: capture_audio.rs  get_pid.rs  leak.rs  store_audio.rs  store_image.rs  test_fps.rs
screencapturekit/: Cargo.toml  README.md
screencapturekit-sys/: Cargo.toml  build.rs
screencapturekit-sys/examples/: store_audio.rs  store_image.rs  test_fps.rs
screencapturekit-sys/src/: as_ptr.rs  audio_buffer.rs  block_utils.rs  ci_image.rs  cm_block_buffer_ref.rs  cm_format_description_ref.rs  cm_sample_buffer_ref.rs  content_filter.rs  cv_image_buffer.rs  cv_image_buffer_ref.rs  cv_pixel_buffer_ref.rs  lib.rs  macros.rs  objc_utils.rs  os_types.rs  sc_stream_frame_info.rs  sc_window.rs  shareable_content.rs  stream.rs  stream_configuration.rs  stream_error_handler.rs  stream_output_handler.rs
screencapturekit-sys/src/os_types/: base.rs  cm_sample_buffer.rs  four_char_code.rs  geometry.rs  graphics.rs  rc.rs
screencapturekit/examples/: segfault.rs  store_audio.rs  store_image.rs
screencapturekit/src/: cm_sample_buffer.rs  cv_pixel_buffer.rs  lib.rs  sc_content_filter.rs  sc_display.rs  sc_error_handler.rs  sc_output_handler.rs  sc_running_application.rs  sc_shareable_content.rs  sc_stream.rs  sc_stream_configuration.rs  sc_sys.rs  sc_types.rs  sc_window.rs
src/: lib.rs
src/audio/: audio_buffer.rs
src/core_media/: cm_format_description_ref.rs  cm_sample_buffer.rs  mod.rs
src/os_types/: base.rs  rc.rs
src/output/: mod.rs  sc_stream_frame_info.rs  sc_stream_output.rs
src/shareable_content/: mod.rs  sc_display.rs  sc_running_application.rs  sc_shareable_content.rs  sc_window.rs
src/stream/: internal_stream.rs  mod.rs  sc_content_filter.rs  sc_stream.rs  sc_stream_configuration.rs  sc_stream_delegate.rs  sc_stream_delegate_trait.rs  sc_stream_output_trait.rs  sc_stream_output_type.rs
src/stream/internal/: ffi_utils.rs  mod.rs  output_handler.rs  sc_stream.rs  stream_delegate.rs
src/utils/: as_ptr.rs  block.rs  error.rs  hash.rs  mod.rs  objc.rs
tests/: leak_test.rs
