[package]


keywords = ["screencapture", "screencapturekit", "macos"]
description = "Rust wrapper for apple's ScreenCaptureKit"
name = "screencapturekit"
categories = [
  "external-ffi-bindings",
  "multimedia",
  "multimedia::video",
  "os::macos-apis",
]
repository = "https://github.com/svtlabs/screencapturekit-rs"
authors = ["Per Johansson <mail@perjohansson.net>"]
homepage = "https://github.com/svtlabs"
edition = "2021"
rust-version = "1.72"
version = "0.3.0"
license = "MIT OR Apache-2.0"

[lib]
path = "./src/lib.rs"

[features]
ci = []

[dependencies]
objc = { version = "0.2", features = ["exception"] }
block = "0.1"
dispatch = "0.2"
once_cell = "1"
core-foundation = { version = "0.9", features = ["mac_os_10_8_features"] }
core-graphics = { version = "0.23" }
core-media-rs = { path = "../core-media-rs" }
