[package]
name = "screencapturekit"

keywords = ["screencapture", "screencapturekit", "macos"]
description = "Rust wrapper for apple's ScreenCaptureKit"

categories = [
  "external-ffi-bindings",
  "multimedia",
  "multimedia::video",
  "os::macos-apis",
]

repository = "https://github.com/svtlabs/screencapturekit-rs"
authors = ["Per Johansson <per@doom.fish>"]
homepage = "https://github.com/svtlabs"
edition = "2021"
rust-version = "1.72"
version = "0.3.0"
license = "MIT OR Apache-2.0"

[lib]
path = "./src/lib.rs"

[features]
ci = []

[dependencies]
core-media-rs = { git = "https://github.com/doom-fish/core-frameworks.git" }
objc = { version = "0.2", features = ["exception"] }
block2 = "0.5"
dispatch = "0.2"
core-foundation = { version = "0.10" }
core-graphics = { version = "0.24" }
