[package]
name = "screencapturekit"
edition = "2021"
description = "Safe wrapper for Apple's ScreenCaptureKit"
categories = [
  "api-bindings",
  "multimedia",
  "multimedia::video",
  "os::macos-apis",
]
readme = "README.md"
repository = "https://github.com/svtlabs/screencapturekit-rs/tree/main/screencapturekit"

version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
homepage.workspace = true

[features]
ci = []

[lib]
path = "./src/lib.rs"

[dependencies]
screencapturekit-sys = { version = "0.1.0", path = "../screencapturekit-sys" }

[dev-dependencies]
objc-foundation = "0.1"

[[example]]
name = "store_image"
